# Odoo14-RestApi-Example

./: LICENSE  OdooAPI-Efishery.postman_collection.json  README.md  docker-compose.yml
addons/efishery_module/: __manifest__.py
addons/efishery_module/controllers/: controllers.py
addons/efishery_module/demo/: demo.xml
addons/efishery_module/models/: models.py
addons/efishery_module/security/: ir.model.access.csv
addons/efishery_module/static/: swagger.json
addons/efishery_module/views/: templates.xml  views.xml
configs/nginx/conf.d/: default.conf
configs/odoo/: odoo.conf
interceptor_service/: app.py  config.py  dockerfile  pyproject.toml  requirements.txt  swagger.json  xmlrpc_test.py
interceptor_service/db/: models.py
interceptor_service/resources/: auth.py  routes.py  sale_order.py  webhook.py
interceptor_service/utilities/: odoo_xmlrpc.py
